<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/app_bar" android:id="@+id/loginToolBar"/>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:id="@+id/btnL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/textColorPrimary"
        android:layout_marginBottom="250dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:errorEnabled="true"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/emailr"
            android:hint="@string/emailR"
            android:inputType="textEmailAddress"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:errorEnabled="true"

        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordr"
            android:hint="@string/passwordR"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>





</RelativeLayout>