<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <include layout="@layout/app_bar" android:id="@+id/changePasswordBar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:errorEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordOld1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:hint="@string/password_old"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordNew1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        app:errorEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordNew1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:hint="@string/password_new_1"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordNew2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        app:errorEnabled="true"

        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordNew2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="440dp"
            android:hint="@string/password_new_1"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/textColorPrimary"
        android:text="@string/changePass"
        android:layout_marginTop="520dp"
        android:layout_marginStart="220dp"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:layout_marginBottom="90dp"
        />

</RelativeLayout>